[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openclaw-compressor"
version = "0.1.0"
description = "Pluggable context compression MCP server for OpenClaw / Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "EvilJul" },
]
keywords = ["claude", "openclaw", "mcp", "context", "compression", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
openclaw-compressor = "openclaw_compressor.server:main"

[project.urls]
Homepage = "https://github.com/EvilJul/openclaw-compressor"
Repository = "https://github.com/EvilJul/openclaw-compressor"
Issues = "https://github.com/EvilJul/openclaw-compressor/issues"

[tool.hatch.build.targets.wheel]
packages = ["openclaw_compressor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
